# verisense

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  betanet.json  clear.sh  devnet_spec.json  examples.wat  gamma.sh  gamma_spec.json  local_alice.sh  local_bob.sh  local_dave.sh  local_dave_novalidator.sh  preview_chain_spec.json  rust-toolchain.toml  rustfmt.toml  start_alice.sh  start_bob.sh  start_charlie.sh  start_dave.sh  veavs.wasm
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: check.yml  release.yml  rust.yml
crates/a2a/: Cargo.toml
crates/a2a/src/: lib.rs
crates/domain-verifier/: Cargo.toml
crates/domain-verifier/src/: lib.rs
metadata/: Cargo.toml  build.rs  metadata.scale
metadata/src/: lib.rs  runtime.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
nucleus-examples/: .gitignore  Cargo.toml
nucleus-examples/examples/: basic_macros.rs  http.rs  timer.rs
nucleus-examples/src/: lib.rs
nucleus/cage/: Cargo.toml
nucleus/cage/src/: bytecode.rs  cage.rs  context.rs  keystore.rs  lib.rs  mem.rs  nucleus.rs  runtime.rs  scheduler.rs  test_suite.rs  timer_entry.rs  vm.rs  wasm_code.rs
nucleus/cage/src/context/: http.rs  kvdb.rs
nucleus/cage/src/host_func/: http.rs  io.rs  kvdb.rs  mod.rs  scheduler.rs  timer.rs  timer_entry.rs
nucleus/cage/src/state/: backend.rs  mod.rs
nucleus/core-macros/: Cargo.toml
nucleus/core-macros/src/: lib.rs
nucleus/core-sdk/: Cargo.toml
nucleus/core-sdk/src/: account.rs  constant.rs  error.rs  http.rs  io.rs  lib.rs  storage.rs  timer.rs
nucleus/executor/: Cargo.toml
nucleus/executor/src/: code.rs  lib.rs  mem.rs  nucleus.rs  runtime.rs  test_suite.rs  vm.rs
nucleus/executor/src/host_func/: io.rs  mod.rs  timer.rs  timer_entry.rs  tls_stream.rs  tss.rs
nucleus/p2p/: Cargo.toml
nucleus/p2p/src/: lib.rs  lib1.rs
nucleus/rpc/: Cargo.toml
nucleus/rpc-proxy/: Cargo.toml
nucleus/rpc-proxy/src/: lib.rs
nucleus/rpc-server/: Cargo.toml
nucleus/rpc-server/src/: lib.rs  proxy.rs
nucleus/rpc2/: Cargo.toml
nucleus/rpc2/src/: lib.rs  proxy.rs
nucleus/runtime-api/: Cargo.toml
nucleus/runtime-api/src/: lib.rs
nucleus/test-suite/: Cargo.toml
offchain/core-macros/: Cargo.toml
offchain/core-macros/src/: lib.rs
offchain/core-sdk/: Cargo.toml
offchain/core-sdk/src/: lib.rs
offchain/nucleus-cage/: Cargo.toml
offchain/nucleus-cage/src/: cage.rs  context.rs  lib.rs  nucleus.rs  vm.rs  wasm_code.rs
offchain/nucleus-cage/src/context/: kvdb.rs
offchain/nucleus-core/: Cargo.toml
offchain/nucleus-core-macros/: Cargo.toml
offchain/nucleus-core-macros/src/: lib.rs
offchain/nucleus-core/src/: context.rs  lib.rs
offchain/nucleus-examples/: Cargo.toml
offchain/nucleus-examples/src/: lib.rs
offchain/nucleus-rpc/: Cargo.toml
offchain/nucleus-rpc/src/: lib.rs
pallets/a2a/: Cargo.toml
pallets/a2a/src/: lib.rs  offchain.rs  weights.rs
pallets/a2a/src/migrations/: v0.rs  v1.rs
pallets/mcp/: Cargo.toml
pallets/mcp/src/: lib.rs  offchain.rs  outchain.rs  weights.rs
pallets/mcp/src/migrations/: v0.rs  v1.rs
pallets/mrp2p/: Cargo.toml
pallets/mrp2p/src/: lib.rs
pallets/nucleus/: Cargo.toml
pallets/nucleus/src/: check_nonce.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/restaking/: Cargo.toml
pallets/restaking/runtime-api/: Cargo.toml
pallets/restaking/runtime-api/src/: lib.rs
pallets/restaking/src/: lib.rs  merkle.rs  outchain.rs  solidity.rs  types.rs  validator_data.rs  weights.rs
pallets/swap/: Cargo.toml
pallets/swap/runtime-api/: Cargo.toml
pallets/swap/runtime-api/src/: lib.rs
pallets/swap/src/: lib.rs  rpc.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/validator/: Cargo.toml
pallets/validator/src/: lib.rs
pallets/validators/: Cargo.toml
pallets/validators/src/: lib.rs  types.rs  weights.rs
pallets/vrf/: Cargo.toml
pallets/vrf/src/: constants.rs  lib.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/a2a/: Cargo.toml
rpc/a2a/src/: lib.rs  types.rs
rpc/mcp/: Cargo.toml
rpc/mcp/src/: lib.rs
rpc/nucleus/: Cargo.toml
rpc/nucleus/src/: lib.rs
rpc/server/: Cargo.toml
rpc/server/src/: lib.rs
runtime/: Cargo.toml
runtime-api/a2a/: Cargo.toml
runtime-api/a2a/src/: lib.rs
runtime-api/mcp/: Cargo.toml
runtime-api/mcp/src/: lib.rs
runtime-api/nucleus/: Cargo.toml
runtime-api/nucleus/src/: lib.rs
runtime-api/restaking/: Cargo.toml
runtime-api/restaking/src/: lib.rs
runtime-api/swap/: Cargo.toml
runtime-api/swap/src/: lib.rs
runtime-api/tss/src/: lib.rs
runtime-api/validator/: Cargo.toml
runtime-api/validator/src/: lib.rs
runtime-api/validators/: Cargo.toml
runtime-api/validators/src/: lib.rs
runtime/src/: constrants.rs  lib.rs
scripts/: build-docker-image.sh  clear.sh  local_charlie.sh  local_dave.sh  start_dave.sh
spec/: betanet.json  betanet1.json  betanet2.json  betanet3.json  devnet_spec.json  eigenlayer.json  gamma_spec.json
subnet/cage/: Cargo.toml
subnet/cage/src/: cage.rs  lib.rs
subnet/executor/: Cargo.toml
subnet/executor/src/: error.rs  lib.rs  nucleus.rs  runtime.rs  vm.rs
subnet/executor/src/host_func/: http.rs  io.rs  timer.rs  timer_entry.rs
subnet/network/: Cargo.toml
subnet/network/src/: lib.rs
subnet/network/src/protocols/: mod.rs  monadring.rs
subnet/relayer/: Cargo.toml
subnet/relayer/src/: lib.rs
support/: Cargo.toml
support/src/: consts.rs  lib.rs
tss/: Cargo.toml  rust-toolchain.toml
tss/runtime-api/: Cargo.toml
tss/src/: lib.rs  mock.rs  runtime.rs  testing.rs
