[workspace]
members = [
    "node",
    "runtime",
    "metadata",
    "pallets/*",
    "subnet/*",
    "crates/*",
    "rpc/*",
    "runtime-api/*",
    "primitives",
    "metadata",
    "support",
    "tss",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Verisense Team"]
edition = "2021"
description = "The Verisense node for running Nucleus."

[workspace.dependencies]
codec = { features = [
    "derive",
], package = "parity-scale-codec", version = "3.6", default-features = false }
parity-scale-codec-derive = "3.6"
scale-info = { features = [
    "derive",
    "serde",
], version = "2.11", default-features = false }
serde = { version = "1", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }
log = { version = "0.4", default-features = false }
vrs-core-sdk = { git = "https://github.com/verisense-network/vrs-core-sdk.git", branch = "feature/auto-abi", features = ["std"] }
# frame
frame-executive = { version = "36.0.0", default-features = false }
frame-support = { version = "36.0.0", default-features = false }
frame-system = { version = "36.0.0", default-features = false }
substrate-frame-rpc-system = { version = "36.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
# frame pallets
pallet-babe = { version = "36.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }
pallet-grandpa = { version = "36.0.0", default-features = false }
pallet-sudo = { version = "36.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
pallet-authority-discovery = { version = "36.0.0", default-features = false }
pallet-transaction-payment = { version = "36.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "38.0.0", default-features = true }
pallet-transaction-payment-rpc-runtime-api = { version = "36.0.0", default-features = false }
pallet-authorship = { version = "36.0.0", default-features = false }
pallet-session = { version = "36.0.0", default-features = false }
pallet-im-online = { version = "35.0.0", default-features = false }
pallet-offences = { version = "35.0.0", default-features = false }
pallet-assets = { version = "37.0.0", default-features = false }
# primitives
sp-api = { version = "33.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-consensus-babe = { features = [
    "serde",
], version = "0.39.0", default-features = false }
sp-authority-discovery = { version = "33.0.0", default-features = false }
sp-consensus-grandpa = { features = [
    "serde",
], version = "20.0.0", default-features = false }
sp-core = { features = ["serde"], version = "34.0.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-offchain = { version = "33.0.0", default-features = false }
sp-runtime = { features = [
    "serde",
], version = "38.0.0", default-features = false }
sp-timestamp = { version = "33.0.0", default-features = false }
sp-session = { version = "34.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "33.0.0", default-features = false }
sp-version = { features = [
    "serde",
], version = "36.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-keyring = { version = "38.0.0", default-features = false }
sp-blockchain = { version = "35.0.0", default-features = false }
sp-application-crypto = { version = "37.0.0", default-features = false }
sp-staking = { version = "33.0.0", default-features = false }
sp-transaction-storage-proof = { version = "33.0.0", default-features = false }
sc-consensus-beefy = { version = "21.0.0", default-features = false }
sp-consensus = { version = "0.39.1", default-features = false }

# sc
sc-network-types = "0.12.1"
sc-cli = "0.44.0"
sc-executor = "0.39.0"
sc-network = "0.42.0"
sc-service = "0.43.0"
sc-telemetry = "22.0.0"
sc-transaction-pool = "35.0.0"
sc-transaction-pool-api = "35.0.0"
sc-offchain = "37.0.0"
sc-consensus-babe = "0.42.0"

sc-consensus-babe-rpc = "0.42.0"
sc-consensus = "0.41.0"
sc-consensus-grandpa = "0.27.0"
sc-client-api = "35.0.0"
sc-rpc-api = "0.41.0"
sc-rpc = "37.0.0"
sc-basic-authorship = "0.42.0"
sc-authority-discovery = "0.42.0"

# wasmtime
wasmtime = { version = "22.0.0" }
