[package]
name = "vrs-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
subxt-core = { version = "0.37.0", default-features = false }

[build-dependencies]
vrs-runtime = { path = "../runtime", optional = true }
subxt-codegen = { version = "0.37.0", optional = true }
subxt-metadata = { version = "0.37.0", optional = true }
codec = { workspace = true, optional = true }

[features]
std = [
    "vrs-runtime",
    "subxt-codegen",
    "subxt-metadata",
    "codec",
]
default = ["std"]
