[package]
name = "verisense"
version.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], version = "4.5.3" }
futures = { features = ["thread-pool"], version = "0.3.30" }
serde_json = { version = "1.0" }
jsonrpsee = { features = ["server"], version = "0.23.2" }
log = "0.4"

sc-cli = { version = "0.44.0" }
sc-executor = { version = "0.39.0" }
sc-network = { version = "0.42.0" }
sc-service = { version = "0.43.0" }
sc-telemetry = { version = "22.0.0" }
sc-transaction-pool = { version = "35.0.0" }
sc-transaction-pool-api = { version = "35.0.0" }
sc-offchain = { version = "37.0.0" }
sc-consensus-aura = { version = "0.42.0" }
sc-consensus = { version = "0.41.0" }
sc-consensus-grandpa = { version = "0.27.0" }
sc-client-api = { version = "35.0.0" }
sc-rpc-api = { version = "0.41.0" }
sc-basic-authorship = { version = "0.42.0" }
sc-network-types = "0.12.1"

sp-core = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-authority-discovery = { workspace = true, default-features = true }
#sp-state-machine = { workspace = true, default-features = true }

frame-system = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }

vrs-runtime = { path = "../runtime" }
vrs-primitives = { path = "../primitives" }
vrs-nucleus-runtime-api = { path = "../nucleus/runtime-api" }
vrs-nucleus-rpc-proxy = { path = "../nucleus/rpc-proxy" }
vrs-nucleus-cage = { path = "../nucleus/cage" }
vrs-nucleus-p2p = { path = "../nucleus/p2p" }
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"
# scale-info.workspace = true
# parity-scale-codec.workspace = true


[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
