[package]
name = "verisense"
version.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], version = "4.5.3" }
futures = { features = ["thread-pool"], version = "0.3.30" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
jsonrpsee = { features = ["server"], version = "0.23.2" }
log = { workspace = true }
tracing = { version = "0.1", features = ["std"] }
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"

libp2p = { version = "0.55", features = ["identify"] }

sc-cli = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-network-types = { workspace = true }

sp-core = { workspace = true, default-features = true }
sp-consensus-babe = {workspace = true, default-features = true}
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keystore = {workspace = true, default-features = true}
sp-keyring = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-authority-discovery = { workspace = true, default-features = true }
sc-consensus-beefy = {workspace = true, default-features = true}
sp-consensus = {workspace = true, default-features = true}
sp-transaction-storage-proof = {workspace = true, default-features = true}
frame-system = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
pallet-im-online = {workspace = true, default-features = true}
pallet-restaking = { path = "../pallets/restaking" }
sc-rpc = {workspace = true}
vrs-runtime = { path = "../runtime" }
vrs-primitives = { path = "../primitives" }
vrs-nucleus-runtime-api = { path = "../nucleus/runtime-api" }
vrs-restaking-runtime-api = { path = "../pallets/restaking/runtime-api" }
vrs-tss-runtime-api = { path = "../tss/runtime-api" }
vrs-swap-runtime-api = {path = "../pallets/swap/runtime-api" }
vrs-nucleus-rpc-proxy = { path = "../nucleus/rpc-proxy" }
vrs-nucleus-rpc-server = { path = "../nucleus/rpc2" }
vrs-nucleus-cage = { path = "../nucleus/cage" }
vrs-tss = { path = "../tss" }
vrs-nucleus-p2p = { path = "../nucleus/p2p" }
vrs-support = {path = "../support"}
vrs-metadata = { path = "../metadata" }
[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
