[package]
name = "vrs-nucleus-examples"
version = "0.0.1"
authors = ["Verisense Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vrs-core-sdk = { path = "../nucleus/core-sdk", default-features = false }
vrs-core-macros = { path = "../nucleus/core-macros", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }

[dev-dependencies]
hex = "0.4"
rand = { version = "0.8", features = ["std"] }

[features]
default = ["std"]
std = ["vrs-core-sdk/std"]
no-std = []
