[package]
name = "vrs-nucleus-examples"
version = "0.0.1"
authors = ["Verisense Team"]
edition = "2021"

[[example]]
name = "timer"
crate-type = ["cdylib"]

[[example]]
name = "basic_macros"
crate-type = ["cdylib"]

[dev-dependencies]
vrs-core-sdk = { path = "../nucleus/core-sdk", default-features = false }
vrs-core-macros = { path = "../nucleus/core-macros", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
