[package]
name = "vrs-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = ["derive", "serde"], workspace = true, default-features = false }
sp-runtime = { features = ["serde"], workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
]
