[package]
name = "vrs-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = [
    "derive",
    "serde",
], workspace = true, default-features = false }
sp-runtime = { features = [
    "serde",
], workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sc-network-types = { version = "0.12.1", optional = true }


[dependencies.sp-application-crypto]
version = "37.0.0"
default-features = false

[features]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sc-network-types",
]
default = ["std"]
