[package]
name = "vrs-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = [
    "derive",
    "serde",
], workspace = true, default-features = false }
sp-runtime = { features = [
    "serde",
], workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sc-network-types = { workspace = true, optional = true }
sp-application-crypto = {workspace = true, default-features = false}
serde = { workspace = true, features = ["derive"],default-features = false }

[dev-dependencies]
hex = { version = "0.4.3" }

[features]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "serde/std",
    "sc-network-types",
]
default = ["std"]
