[package]
name = "vrs-runtime"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { features = [
	"derive",
	"serde",
], workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
# frame
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
# frame pallets
pallet-babe = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-restaking = { path = "../pallets/restaking", default-features = false }
pallet-nucleus = { path = "../pallets/nucleus", default-features = false }
pallet-validators = { path = "../pallets/validators", default-features = false }
# primitives
vrs-support = { path = "../support", default-features = false }
vrs-primitives = { path = "../primitives", default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-babe = { features = [
	"serde",
], workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-consensus-grandpa = { features = [
	"serde",
], workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
sp-core = { features = ["serde"], workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { features = [
	"serde",
], workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { features = [
	"serde",
], workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }

# RPC related
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
vrs-nucleus-runtime-api = { path = "../nucleus/runtime-api", default-features = false }
vrs-restaking-runtime-api = { path = "../pallets/restaking/runtime-api", default-features = false }
vrs-tss-runtime-api = { path = "../tss/runtime-api", default-features = false }
[build-dependencies]
substrate-wasm-builder = { optional = true, version = "24.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-authority-discovery/std",
	"pallet-assets/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-validators/std",
	"pallet-restaking/std",
	"pallet-nucleus/std",
	"vrs-primitives/std",
	"vrs-nucleus-runtime-api/std",
	"vrs-restaking-runtime-api/std",
	"vrs-tss-runtime-api/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-staking/std",
	"substrate-wasm-builder",
]
