[package]
name = "verisense-support"
edition.workspace = true
version.workspace = true
publish = false


[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
]