[package]
name = "verisense-support"
edition.workspace = true
version.workspace = true
publish = false


[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { features = ["derive"], workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false}
sp-runtime = { workspace = true,default-features = false}
sp-std = { workspace = true ,default-features = false}
[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "sp-runtime/std",
]