[package]
name = "vrs-tss"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

# tss
tss-sdk = { git = "https://github.com/verisense-network/veritss.git", branch = "master", package = "tss-sdk" }
libp2p-identity = "0.2.10"
crypto-bigint = "0.6.0"
sp-keystore = { workspace = true }
sp-core = { workspace = true }
sha2 = "0.10.8"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
parking_lot = "0.12.1"
anyhow = "1.0.70"
tokio = { version = "1.34.0", features = ["full"] }
