[package]
name = "vrs-tss"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

# tss
# tss-sdk = { git = "https://github.com/verisense-network/veritss.git", rev = "719d38c9810602ecea139a6efb28a6760326b8ac", package = "tss-sdk" }
tss-sdk = { path = "../../veritss/tss-sdk" }
libp2p-identity = "0.2.10"
crypto-bigint = "0.6.0"
sp-keystore = { workspace = true }
sp-core = { workspace = true }
sha2 = "0.10.8"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
parking_lot = "0.12.1"
anyhow = "1.0.70"
tokio = { version = "1.34.0", features = ["full"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
bincode = "1.3"
rand = "0.9"
k256 = "0.13.4"
log = { workspace = true }
sha3 = "0.10.8"
num-bigint = "0.4.1"
num-traits = "0.2.19"
