[package]
name = "domain-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false}
codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
log = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
    "serde/std",
    "serde_bytes/std",
    "serde_json/std"
]
default =["std"]