[package]
name = "vrs-nucleus-cage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sp-runtime = { workspace = true }
sc-network = { version = "0.42.0" }
tokio = { version = "1", features = ["full"] }
vrs-core-sdk = { path = "../core-sdk" }
vrs-primitives = { path = "../../primitives" }
vrs-nucleus-runtime-api = { path = "../runtime-api" }
codec = { workspace = true }
wasmtime = { workspace = true }
rocksdb = "0.21.0"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
futures = { features = ["thread-pool"], version = "0.3.30" }
sp-core = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sc-client-api = { version = "35.0.0" }
hex = { version = "0.4" }
thiserror = "1"
vrs-metadata = { path = "../../metadata" }
vrs-nucleus-p2p= { path = "../../nucleus/p2p" }
chrono = { version = "0.4" }
hyper = { version = "1.3", features = ["full"] }
unicase = "2.6"
hyper-tls = "0.6.0"
hyper-util = { version ="0.1", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
pin-project-lite = "0.2.4"
xmt = { package = "sparse-merkle-tree", version = "0.6.1" }


[dev-dependencies]
temp-dir = "0.1.13"
