[package]
name = "vrs-nucleus-cage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rocksdb = "0.21.0"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
futures = { features = ["thread-pool"], version = "0.3.30" }
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4" }
thiserror = "1"

vrs-runtime = { path = "../../runtime" }
vrs-metadata = { path = "../../metadata" }
vrs-primitives = { path = "../../primitives" }
vrs-nucleus-runtime-api = { path = "../../runtime-api/nucleus" }
vrs-nucleus-executor = { path = "../executor" }
vrs-tss = { path = "../../tss" }
vrs-nucleus-p2p = { path = "../p2p" }

codec = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
sc-network = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-keystore = { workspace = true }
sc-client-api = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-authority-discovery = { workspace = true }
# chrono = { version = "0.4" }
# hyper = { version = "1.3", features = ["full"] }
# unicase = "2.6"
# hyper-tls = "0.6.0"
# hyper-util = { version ="0.1", features = ["full"] }
# bytes = "1"
# http-body-util = "0.1.0"
# tokio-native-tls = "0.3"
# pin-project-lite = "0.2.4"
# xmt = { package = "sparse-merkle-tree", version = "0.6.1" }
# blake2 = "0.10.6"

[dev-dependencies]
temp-dir = "0.1.13"
