[package]
name = "vrs-core-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
vrs-core-sdk = { path = "../core-sdk", default-features = false }

[features]
default = ["std"]
std = ["vrs-core-sdk/std"]
